terraform/kubernetes/cluster-policies/cilium/cilium-module/sources/apim/cnp-apim-observed-ingress-candidate.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-apim-observed-ingress-candidate
  namespace: apim
  annotations:
    "policies.cilium.io/title": "Apim observed ingress candidate"
    "platform.publiccloudexperiments.net/source-kind": "CiliumNetworkPolicy"
    "platform.publiccloudexperiments.net/hubble-policy-candidate": "true"
    "platform.publiccloudexperiments.net/hubble-policy-direction": "ingress"
    "platform.publiccloudexperiments.net/hubble-policy-mode": "workload"
    "platform.publiccloudexperiments.net/hubble-policy-row-count": "1"
    "platform.publiccloudexperiments.net/hubble-policy-since": "5m"
    "platform.publiccloudexperiments.net/hubble-policy-iterations": "3"
    "platform.publiccloudexperiments.net/hubble-policy-capture-mode": "flows"
specs:
  - description: >-
      Observed ingress traffic from apim/apim
    endpointSelector:
      matchLabels:
        "k8s:io.kubernetes.pod.namespace": "apim"
        "k8s:app.kubernetes.io/component": "apim"
    ingress:
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8000"
                protocol: TCP
